--- a/recipes/recipe_style.css
+++ b/recipes/recipe_style.css
@@ -28,6 +28,7 @@ nav li a {
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    font-size: 18px;
 }
 
 nav li a:hover:not(.active) {
