--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@
 html,
 body {
     height: 100%;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -13,8 +14,33 @@ body {
     background-color: rgb(238, 131, 113);
 }
 
+/* W3Schools Horizontal NavBar */
+.navigation ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgb(197, 101, 84);
+}
+
+.navigation li {
+    float: left;
+}
+
+.navigation li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+.navigation li a:hover:not(.active) {
+    background-color: rgb(155, 63, 46);
+}
+
 .container {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     display: flex;
     width: 100vw;
     height: 100vh;
